--- a/frågor.html
+++ b/frågor.html
@@ -1,1 +1,18 @@
 <!-- Frågor -->
+1. Vad är entiteter
+
+2. På vilka tre sätt kan man skriva entiteter? Exemplifiera! 
+
+3. Vilka fyra tecken kräver att de skrivs som entiteter, eftersom de har specialfunktioner i HTML? Vilka är deras namngivna entiteter?
+
+<!-- Svar -->
+
+
+
+
+
+
+
+
+
+
