--- a/frågor.html
+++ b/frågor.html
@@ -6,9 +6,9 @@
 3. Vilka fyra tecken kräver att de skrivs som entiteter, eftersom de har specialfunktioner i HTML? Vilka är deras namngivna entiteter?
 
 <!-- Svar -->
+1. Entiteter är symboler eller tecken som man kan använda genom att skriva ett "Entity Number" i koden. Tex &#62
 
-
-
+2. 
 
 
 
