--- a/frågor.html
+++ b/frågor.html
@@ -5,6 +5,16 @@
 
 3. Vilka fyra tecken kräver att de skrivs som entiteter, eftersom de har specialfunktioner i HTML? Vilka är deras namngivna entiteter?
 
+4. Vad är en font?
+
+5. Vad är nedladdningsbara typsnitt?
+
+6. Vad är och hur fungerar en font-stack i css?
+
+7. Vilka är de fem generiska font-familjerna och vad utmärker dem?
+
+8. Vad är och hur fungerar:
+
 <!-- Svar -->
 1. Entiteter är symboler eller tecken som man kan använda genom att skriva ett "Entity Number" i koden. 
 
