--- a/frågor.html
+++ b/frågor.html
@@ -1,33 +1,21 @@
 <!-- Frågor -->
+Entitet
 1. Vad är entiteter
 
 2. På vilka tre sätt kan man skriva entiteter? Exemplifiera! 
 
 3. Vilka fyra tecken kräver att de skrivs som entiteter, eftersom de har specialfunktioner i HTML? Vilka är deras namngivna entiteter?
 
-4. Vad är en font?
-
-5. Vad är nedladdningsbara typsnitt?
-
-6. Vad är och hur fungerar en font-stack i css?
-
-7. Vilka är de fem generiska font-familjerna och vad utmärker dem?
-
-8. Vad är och hur fungerar:
-
 <!-- Svar -->
 1. Entiteter är symboler eller tecken som man kan använda genom att skriva ett "Entity Number" i koden. 
 
 2. Tex &#62; &#60; &#38;
 
-3.
+3. &, # och nummer.
 
-4.
+Font
 
-5.
 
-6.
 
-7.
 
-8.
+
